Develop (#69)
* rev

* fixed swagger

* Update docker-image.yml

* add sql test

* resove conflit

* added login func

* fixed error

* change secret moethod

* add change

* add jwt

* revised env

* ok (#13)

* Develop (#12)

* rev

* fixed swagger

* Update docker-image.yml

* add sql test

* resove conflit

* added login func

* fixed error

* change secret moethod

* add change

* add jwt

* revised env


* Update main.go


* change name

* modulize model layer, revised auth, added homepage

* remove code

* added infra image

* rev

* add endpoint

* add album

* add kind

* added getAlbumById

* added getAlbumsByKindId

* added search logic

* add search & products

* added AlbumType

* added getShoppingCartByAccount

* added auth expire time

* added join data

* add album search

* using readwirte split

* added adv search

* added playList

* null handel

* added fAlbumName

* added fCoverPath

* added add, delete playList

* add route

* revised sqlRead

* added cache

* add redis clinet

* added 2nd sql cache by redis

* revised  Album query

* revised Activity

* fixed expire time

* revised AlbumType

* revised kind

* revised login, sugnup

* impletement useCache

* handle cacheAvailable

* partial revised product

* revised product and playlist

* revised cache

* Rename common.go to Common.go

to upper

* added txn option

* added txn option

* added db.Close()

* impletement txn

* added create err handle

* revised error handle

* update swag

* update to new method

* added HTTP util

* test timeout

* remove test code

* revised timeout

* remove test code

* added post method

* added SSO

* added google sso

* account not found handle

* fixed 500 err

* added sso test code

* added sso signup

* fixed null string

* solve null

* fixed not used pkg

* added sendgr
