# docs/swagger.json
@@ -105,6 +105,30 @@
                 }
             }
         },
+        "/api/flushAllCache": {
+            "get": {
+                "security": [
+                    {
+                        "securityDefinitions.apikey BearerAuth": []
+                    },
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Flush All Cache",
+                "tags": [
+                    "Homepage"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    },
+                    "500": {
+                        "description": "error"
+                    }
+                }
+            }
+        },
         "/api/getAccountFromJWT": {
             "get": {
                 "security": [
