# router.go
@@ -50,6 +50,7 @@ func newRouter() *echo.Echo {
 	}))
 
 	api.GET("", getAccountFromJWT)
+	api.GET("/flushAllCache", flushAllCache)                       // GET /api/flushAllCache
 	api.GET("/getAccountFromJWT", getAccountFromJWT)               // GET /api/getAccountFromJWT
 	api.GET("/getShoppingCartByAccount", getShoppingCartByAccount) // GET /api/getShoppingCartByAccount
 	api.GET("/getPlayListByAccount", getPlayListByAccount)         // GET /api/getPlayListByAccount
